Remove name tooltip, fixed overflow bug.

--- a/client/assets/css/hangout.css
+++ b/client/assets/css/hangout.css
@@ -180,22 +180,6 @@ form button {
 	opacity: 0.6;
 }
 
-.users .user .tooltip {
-	min-width: 400px;
-	max-width: 600px;
-	min-height: 48px;
-	max-height: 500px;
-	display: none;
-	background: #FFFFFF;
-	position: absolute;
-	top: 0;
-	left: 100%;
-	z-index: 100;
-	overflow-wrap: break-word;
-	padding: 16px;
-	box-sizing: border-box;
-}
-
 .users .user:hover {
 	background: rgba(0, 0, 0, 0.06);
 }
